--- a/less/loadMore.less
+++ b/less/loadMore.less
@@ -39,6 +39,7 @@
   font-size: @post_font_size_text;
   line-height: 1.8;
   padding: 0 15px;
+  color: @post_font_color;
 }
 
 .teaserText p {
@@ -63,24 +64,34 @@
 .teaserText {
   padding: 10px;
 }
-
+/*
 .weiter {
-  width: 30px;
-  height: 30px;
-  bottom: 15px;
+  bottom: 15px;right: 25px;
+  position: absolute;
+  z-index: 99;
+  color: @post_font_color_headline;
+}
+*/
+.teaserWeiter {
+  bottom: 25px;
   right: 25px;
   position: absolute;
   z-index: 99;
+  font-size: @teaser_font_size_text;
+  color: @teaser_font_color_headline !important;
 }
 
-.teaserWeiter {
-  width: 45px;
-  height: 45px;
+.postWeiter{
   bottom: 15px;
-  right: 25px;
+  right: 15px;
   position: absolute;
   z-index: 99;
+  font-size: @post_font_size_text;
 }
+.postWeiter a{
+  color: @post_font_color_headline !important;
+}
+
 .blogHeadlinePost {
   font-size: @post_font_size_headline;
   font-weight: 600;
@@ -104,25 +115,24 @@
   font-color: @teaser_font_color;
 }
 
-#loadMoreButton, #backButton {
+#loadMoreButton{
   margin: 50px auto;
-  background: none;
   border: none;
   display: block;
   text-align: center;
-  height: 70px;
+  background: none;
 }
-#loadMoreButton span, #backButton span {
+#loadMoreButton span{
   border: @border_width_button @border_style @border_color_button;
-  font-size: 20px;
+  font-size: @button_font_size;
   font-weight: 400;
   color: @font_color_button;
-  padding: 15px 80px;
-}
-#loadMoreButton span:hover, #backButton span:hover {
+  padding: @button_font_size (@button_font_size)*2;
   background: @color_button;
 }
-#loadMoreButton:focus, #backButton:focus {
+#loadMoreButton span:hover{
+  background: @button_hover_style;
+}  #loadMoreButton:focus, #backButton:focus {
   outline: none;
 }
 #backButton {
@@ -146,4 +156,17 @@
 
 .teaserImage img{
   border-radius: @border_radius 0px 0px @border_radius;
+}
+
+.fas,.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h3:hover, h3 a:hover, a:hover, .teaserWeiter:hover, .postWeiter:hover {
+  color: @hover_color !important;
 }
