- fixed scrolling with small height

--- a/less/loadMore.less
+++ b/less/loadMore.less
@@ -173,6 +173,6 @@ h3:hover, h3 a:hover, a:hover, .teaserWeiter:hover, .postWeiter:hover {
 }
 
 .blogImage, .blogImageLarger{
-  -webkit-filter: @image_filters(@image_filter_value);
-  filter: @image_filters(@image_filter_value);
+  -webkit-filter: @image_filters;
+  filter: @image_filters;
 }
