- fixed font colors

--- a/less/loadMore.less
+++ b/less/loadMore.less
@@ -26,6 +26,7 @@
   line-height: 1.9;
   padding: 15px 10px 0 15px;
   margin: 0px;
+  color: @post_font_color;
 }
 .blogHeadlinePost {
   color: @post_font_color_headline !important;
@@ -52,6 +53,7 @@
   font-size: @teaser_font_size_text;
   line-height: 1.9;
   padding: 0px;
+  color: @teaser_font_color;
 }
 .blogImage{
   width: 100%;
@@ -118,7 +120,7 @@
   display: block;
   margin: 20px 0px 5px 0px;
   font-size: @teaser_font_size_headline - 9px;
-  font-color: @teaser_font_color;
+  color: @teaser_font_color;
 }
 
 #loadMoreButton{
