--- a/css/loadMore.css
+++ b/css/loadMore.css
@@ -1,144 +1,169 @@
 .loadMoreRow {
-	margin: 0 auto;
-	margin-bottom: 15px;
+  margin: 0 auto;
+  margin-bottom: 15px;
 }
 .news {
-	padding: 0 15px;
+  padding: 0 15px;
 }
 .newsImage img {
-	width: 100vh;
-	padding-top: 5px;
+  width: 100vh;
+  padding-top: 5px;
 }
 .singleBlogPost {
-	padding: 0 15px !important;
-	margin-top: 15px;
+  padding: 0 15px !important;
+  margin-top: 15px;
 }
 .blogInner {
-	border: 1px solid #888;
-	min-height: 490px;
-    position:relative;
+  border: 1px solid #888888;
+  background: #ffffff;
+  min-height: 490px;
+  position: relative;
+  border-radius: 0px;
 }
 .newsDate {
-	font-size: 13px;
-	line-height: 1.9;
-	padding: 15px 10px 0 15px;
-	margin: 0px 0px 10px 0px;
-}
-.blogHeadline {
-	color: #000;
-	font-size: 19px;
-    font-weight: 600;
-    line-height: 1.3;
-	padding: 0 15px;
-	margin-top: -5px;
-}
-.blogItemText p {
-	font-size: 14px;
-	line-height: 1.9;
-	padding: 0 15px;
-}
-
-.teaserText p {
-	font-size: 16px;
-	line-height: 1.9;
-	padding: 0px;
-}
-.blogImage{
-    width: 100%;
-    max-width: 100%;
-}
-.teaserRow{
-	background: #edf2f2;
-    margin: 0px 0px 15px 0px !important;
-	position:relative;
-	border: 1px solid #888;
-}
-.teaserImage {
-	padding-left: 0px !important;
-}
-.teaserText {
-	padding: 10px;
-}
-/*.blogItemText p:after {
-	font-family: FontAwesome;
-	content: "\f138";
-	color: #888;
-}*/
-.weiter {
-    width: 30px;
-	height: 30px;
-    bottom: 15px;
-    right: 25px;
-    position: absolute;
-    z-index: 99;
-}
-
-.teaserWeiter {
-	width: 45px;
-	height: 45px;
-	bottom: 15px;
-	right: 25px;
-	position: absolute;
-	z-index: 99;
+  font-size: 12px;
+  line-height: 1.9;
+  padding: 15px 10px 0 15px;
+  margin: 0px;
+  color: #000000;
 }
 .blogHeadlinePost {
-    font-size: 16px;
-    font-weight: 600;
-    color: #000;
-	line-height: 1.3;
-	padding: 0px 15px;
-	margin: 0px 0px 10px 0px;
+  color: #000000 !important;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+  padding: 0 15px;
+  margin-top: -5px;
 }
-
+.blogItemText p {
+  font-size: 13px;
+  line-height: 1.8;
+  padding: 0 15px;
+  color: #000000;
+}
+.teaserText p {
+  font-size: 16px;
+  line-height: 1.9;
+  padding: 0px;
+  color: #000000;
+}
+.blogImage {
+  width: 100%;
+  max-width: 100%;
+}
+.teaserRow {
+  background: #edf2f2;
+  margin: 0px 0px 15px 0px !important;
+  position: relative;
+  border: 1px solid #888888;
+  border-radius: 0px;
+}
+.teaserImage {
+  padding-left: 0px !important;
+}
+.teaserText {
+  padding: 10px;
+}
+.teaserWeiter {
+  bottom: 25px;
+  right: 25px;
+  position: absolute;
+  z-index: 99;
+  font-size: 16px;
+  color: #000000 !important;
+}
+.postWeiter {
+  bottom: 15px;
+  right: 15px;
+  position: absolute;
+  z-index: 99;
+  font-size: 13px;
+}
+.postWeiter a {
+  color: #000000 !important;
+}
+.blogHeadlinePost {
+  font-size: 16px;
+  font-weight: 600;
+  color: #000;
+  line-height: 1.3;
+  padding: 0px 15px;
+  margin: 0px 0px 10px 0px;
+}
 .blogHeadlineTeaser {
-	font-size: 24px;
-	font-weight: 600;
-	color: #000;
-	line-height: 1.3;
-	margin: 5px 0px 10px 0px;
+  font-size: 24px;
+  font-weight: 600;
+  color: #000000 !important;
+  line-height: 1.3;
+  margin: 5px 0px 10px 0px;
 }
-.teaserDate{
-	display: block;
-	margin: 20px 0px 5px 0px;
+.teaserDate {
+  display: block;
+  margin: 20px 0px 5px 0px;
+  font-size: 15px;
+  color: #000000;
 }
-.article h4 {
-	color: #000;
-	font-size: 22px !important;
-    font-weight: 600;
-    line-height: 1.8;	
-	padding-top: 30px;
+#loadMoreButton {
+  margin: 50px auto;
+  border: none;
+  display: block;
+  text-align: center;
+  background: none;
 }
-#loadMoreButton, #backButton {
-    margin: 50px auto;
-	background: none;
-	border: none;
-	display: block;
-	text-align: center; 
-	height: 70px;
+#loadMoreButton span {
+  border: 2px solid #000000;
+  font-size: 20px;
+  font-weight: 400;
+  color: #000000;
+  padding: 20px 40px;
+  background: #ffffff;
+  border-radius: 0px;
+  display: block;
 }
-#loadMoreButton span, #backButton span {
-    border: 2px solid #000;
-    font-size: 20px;
-    font-weight: 400;
-    color: #000;
-    padding: 15px 80px;	
+#loadMoreButton span:hover {
+  background: #ffffff;
 }
-#loadMoreButton span:hover, #backButton span:hover {
-	background: #ededed;
-}
-#loadMoreButton:focus, #backButton:focus {
-	outline: none;
+#loadMoreButton:focus,
+#backButton:focus {
+  outline: none;
 }
 #backButton {
-	margin-top: -55px;
+  margin-top: -55px;
 }
-
-.endRecordRow{
-	margin-top: 40px;
-	font-size: 20px;
-	text-align: center;
+.endRecordRow {
+  margin-top: 40px;
+  font-size: 20px;
+  text-align: center;
 }
-
-h3:hover, h3 a:hover, a:hover {
-	color: @hover_color;
+.loading-image {
+  display: block !important;
+  width: 20px !important;
+  margin: 40px auto;
+}
+.blogImage {
+  border-radius: 0px 0px 0px 0px;
+}
+.teaserImage img {
+  border-radius: 0px 0px 0px 0px;
+}
+.fas,
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+h3:hover,
+h3 a:hover,
+a:hover,
+.teaserWeiter:hover,
+.postWeiter:hover {
+  color: #888888 !important;
+}
+.blogImage,
+.blogImageLarger {
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
 }
