- added custom font hover for button

--- a/less/loadMore.less
+++ b/less/loadMore.less
@@ -147,6 +147,7 @@
 
 #loadMoreButton span:hover{
   background: @button_hover_style;
+  color: @font_hover_color_button;
 }
 #loadMoreButton:focus, #backButton:focus {
   outline: none;
